--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -543,21 +543,22 @@ body {
     cursor: pointer;
   }
 
-button:hover {
-  color: #fff;
-  background: #6070ff;
-  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
-}
+  button:hover {
+    color: #fff;
+    background: #6070ff;
+    box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  }
 
-button:active {
-  background: #2230d2;
-  color: #fff;
-}
+  button:active {
+    background: #2230d2;
+    color: #fff;
+  }
 
-button:disabled {
-  color: #5e6c84;
-  border: 1px solid #e5e5e5;
-}
+  button:disabled {
+    color: #5e6c84;
+    border: 1px solid #e5e5e5;
+  }
+
   .social-about {
     padding: 20px 0;
     margin-left: 10px;
@@ -902,200 +903,181 @@ button:disabled {
     display: none;
   }
 
-  
-  /* Modal */
+  .modal-bg {
+    background: #c1c7d0c9;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 7;
+    padding: 50px 0;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    backdrop-filter: blur(5px);
+  }
 
-/* .modal-bg{
-  position: fixed;
-  border: 1px solid blue;
-  top: 0;
-  width: 100%;
-  height: 100;
-  left: 0;
-  background-color: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  opacity: 0;
-  backdrop-filter: blur(5px);
-  transition: visibility 0s,opacity 0.5s;
-  background-color: white;
-} */
+  .bg-active {
+    visibility: visible;
+    opacity: 1;
+  }
 
-.modal-bg {
-  background: #c1c7d0c9;
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  z-index: 7;
-  padding: 50px 0;
-  overflow: auto;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  backdrop-filter: blur(5px);
-}
-.bg-active{
-  visibility: visible;
-  opacity: 1;
-}
+  .modal {
+    border: 1px solid black;
+    border: 1px solid #ebecf0;
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    max-width: 88%;
+    margin-left: 100px;
+    border-radius: 16px;
+    box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
+  }
 
-.modal{
-  border: 1px solid black;
-  border: 1px solid #EBECF0;
-  background-color: white;
-  display: flex;
-  justify-content: space-around; 
-  align-items: center; 
-  flex-direction: column;
-  max-width: 88%;
-  margin-left: 100px;
-  border-radius: 16px;
-  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+  .close {
+    top: 10px;
+    right: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 30px;
+    color: grey;
+    margin-right: -95%;
+  }
 
-}
-.close{
-  /* position: absolute; */
-  top: 10px;
-  right: 10px;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 30px;
-  color: grey;
-  margin-right: -95%;
+  .title1 {
+    font-size: 30px;
+    width: 1056px;
+    height: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    line-height: 52px;
+    color: #091e42;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0;
+  }
 
-}
+  .title1tonic {
+    width: 1056px;
+    height: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091e42;
+    order: 0;
+    flex-grow: 0;
+    margin-left: -4%;
+    margin-top: -40px;
+  }
 
-.title1{
-  font-size: 30px;
-  width: 1056px;
-  height: 40px;
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 52px;
-  color: #091E42;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin:0 ;
-}
+  .card1-badges {
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+    margin-left: -72%;
+    padding: 40px;
+  }
 
-.title1tonic{
-  width: 1056px;
-  height: 40px;
-  font-family: 'Poppins',sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 52px;
-  color: #091E42;
-  order: 0;
-  flex-grow: 0;
-  margin-left: -4%;
-  margin-top: -40px;
-}
-.card1-badges{
-  list-style-type: none;
-  display: flex;
-  gap:10px;
-  margin-left: -72%;
-  padding: 40px;
-}
-.modal-counter{
-  width: 12px;
-  height: 10px;
-  margin-top: 10px;
-}
-.image1modal{
-width: 400px;
-height: 586px;
-left: 0px;
-top: 0px;
-border-radius: 8px;
-margin-left: -63%;
-}
-.description-text{
-  display: flex;
-  padding-left: 3%;
+  .modal-counter {
+    width: 12px;
+    height: 10px;
+    margin-top: 10px;
+  }
 
-}
+  .image1modal {
+    width: 400px;
+    height: 586px;
+    left: 0;
+    top: 0;
+    border-radius: 8px;
+    margin-left: -63%;
+  }
 
-.modal-description{
-width: 90%;
-font-family: 'Poppins',sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 30px;
-color: #344563;
-flex: none;
-order: 0;
-flex-grow: 0;
-padding-top: 30px;
-}
+  .description-text {
+    display: flex;
+    padding-left: 3%;
+  }
 
-.links-lang{
-  display: flex;
-  flex-direction: column;
-  padding-top: 13px;
-}
-.modalsIcon {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  padding-top: 13px;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 300px;
-  height: 100px;
-  gap: 15px;
-  margin-top: 20px;
-}
+  .modal-description {
+    width: 90%;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #344563;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    padding-top: 30px;
+  }
 
-.modal-icons{
-font-family: 'Poppins',sans-serif;
-font-weight: 500;
-padding: 4px 12px;
-font-size: 15px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #6070FF;
-display: flex;
-width: 89px;
-height: 24px;
-background: #EBEBFF;
-border-radius: 8px;
-order: 0;
-flex-grow: 0;
-}
-.link-button{
-  display: flex;
-  gap: 10px;
-  margin-top: 20px;
-  padding: 0 10px;
-}
-.livebutton{
-  font-family: 'Poppins',sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  color: #6070FF;
-  gap: 20px;
-}
+  .links-lang {
+    display: flex;
+    flex-direction: column;
+    padding-top: 13px;
+  }
 
-.modal-bg2{
-  display: none;
-}
-.mobileIcons{
-  display: none;
-}
-  
-}
+  .modalsIcon {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding-top: 13px;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 100px;
+    gap: 15px;
+    margin-top: 20px;
+  }
 
+  .modal-icons {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    padding: 4px 12px;
+    font-size: 15px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    display: flex;
+    width: 89px;
+    height: 24px;
+    background: #ebebff;
+    border-radius: 8px;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  .link-button {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    padding: 0 10px;
+  }
+
+  .livebutton {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #6070ff;
+    gap: 20px;
+  }
+
+  .modal-bg2 {
+    display: none;
+  }
+
+  .mobileIcons {
+    display: none;
+  }
+}
