--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -761,7 +761,7 @@
     left: 16px;
   }
 
-  .submit-btn2 {
+  #submit {
     display: flex;
     align-items: center;
     padding: 12px 18px 12px 18px;
