--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -114,7 +114,8 @@ body {
   }
 
   .main {
-    background-image: url("../images/main-background.jpg");
+    /* background-image: url("../images/main-background.jpg"); */
+    background-image: url("/images/main-background.jpg");
     background-repeat: no-repeat;
     object-fit: cover;
     width: 100%;
