--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -115,7 +115,7 @@ body {
 
   .main {
     /* background-image: url("../images/main-background.jpg"); */
-    background-image: url("images/main-background.jpg");
+    background-image: url("../images/main-background.jpg");
     background-repeat: no-repeat;
     object-fit: cover;
     width: 100%;
