--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -593,20 +593,33 @@ body {
     transform: scale(2);
   }
 
-  .about-submit-btn {
-    width: 200px;
-    height: 50px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
+  .primary-btn {
+    align-self: flex-start;
+    text-transform: capitalize;
+    text-decoration: none;
     font-weight: 500;
-    font-size: 17px;
-    line-height: 24px;
-    margin-top: 15px;
-    padding: 10px;
-    text-align: center;
+    font-size: 1.0625rem;
+    line-height: 1.5rem;
     letter-spacing: 0.03em;
+    width: auto;
+    padding: 0.75rem;
+    border: 0.0625rem solid #6070ff;
+    border-radius: 0.5rem;
     color: #396df2;
-    margin-left: 10px;
+    background-color: #fff;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: background-color 0.15s, box-shadow 0.15s;
+  }
+  
+  .primary-btn:hover {
+    color: #fff;
+    background: #6070ff;
+    box-shadow: 0 0.5rem 1rem rgb(64 83 252 / 24%);
+  }
+  
+  .primary-btn:active {
+    background-color: #2230d2;
   }
 
   .desktop-image4 {
